@@ -5,6 +5,9 @@ setupset.copyarg.extract=1
 setupset.copyarg.bextract=1
 setupset.scanHeader=1
 runtime.Preprocessing.any.archiveOriginal=1
+comparam.eraser.ccderaser.LineObjects=2
+comparam.eraser.ccderaser.BoundaryObjects=3
+comparam.eraser.ccderaser.AllSectionObjects=1-3
 comparam.track.beadtrack.RoundsOfTracking=4
 runtime.BeadTracking.any.numberOfRuns=2
 comparam.align.tiltalign.RobustFitting=1
